--- a/logisitc_regression.ipynb
+++ b/logisitc_regression.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4d34d801",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5119675f",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "Text(0.5, 1.0, 'mask')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9cf52c26",
    "metadata": {},
    "outputs": [
@@ -122,12 +122,12 @@
    "id": "90848e02",
    "metadata": {},
    "source": [
-    "Lyphocyte and non-lymphocyte pixel color values are saved in dataframes to create a training set for the logistic regression model"
+    "Lyphocyte and non-lymphocyte pixel color values are saved in dataframes to create a training and testing set for the logistic regression model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "ee987eb7",
    "metadata": {},
    "outputs": [],
@@ -170,28 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "2603d1aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No Lymphocyte folder\n",
-      "No Lymphocyte folder\n",
-      "No Lymphocyte folder\n",
-      "No Lymphocyte folder\n",
-      "No Lymphocyte folder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "image_path = \"C:/Users/vstef/Desktop/MA3/segmentation/MoNuSAC_images_and_annotations\"\n",
-    "masks_path = \"C:/Users/vstef/Desktop/MA3/segmentation/MoNuSAC_masks\"\n",
+    "image_path = \"C:/Users/vstef/Desktop/MA3/segmentation/MoNuSAC_test\"\n",
+    "masks_path = \"C:/Users/vstef/Desktop/MA3/segmentation/MoNuSAC_test_masks\"\n",
     "\n",
     "df_positive = pd.DataFrame(columns=['R', 'G', 'B']) # dataframe for Lymphocyte pixel values\n",
     "df_negative = pd.DataFrame(columns=['R', 'G', 'B']) # dataframe for non-Lymphocyte pixel values\n",
@@ -223,8 +211,171 @@
     "            # For now, these pictures are ignored\n",
     "            print(\"No Lymphocyte folder\")\n",
     "\n",
-    "df_positive.to_csv('positive.csv')\n",
-    "df_negative.to_csv('negative.csv')"
+    "df_positive.to_csv('positive_test.csv')\n",
+    "df_negative.to_csv('negative_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e91f2d77",
+   "metadata": {},
+   "source": [
+    "The training and testing sets are highly unbalanced. That is because most pixels in the image do not belong to a lymphocyte. To construct balanced training and testing sets, a number of negative samples equivalent to the number of positive samples is randomly chosen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "554244cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_positive = pd.read_csv('positive_test.csv', index_col=0)\n",
+    "df_negative = pd.read_csv('negative_test.csv', index_col=0)\n",
+    "\n",
+    "# randomly sample a number of negative values to create balanced sets\n",
+    "# Combine positive and negative values to construct the training and testing sets\n",
+    "tmp = df_negative.sample(len(df_positive), ignore_index=True)\n",
+    "tmp['y'] = 0\n",
+    "df_positive['y'] = 1\n",
+    "df = pd.concat([df_positive, tmp]).reset_index(drop=True)\n",
+    "\n",
+    "# Shuffle the dataframe\n",
+    "df = df.sample(frac=1, random_state=1).reset_index(drop=True)\n",
+    "\n",
+    "df.to_csv('test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ea1a49b",
+   "metadata": {},
+   "source": [
+    "### Model training and testing\n",
+    "The model can now be trained with the constructed sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4a562af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load training and testing sets\n",
+    "df_train = pd.read_csv('train.csv')\n",
+    "X_train = df_train.drop(['y'], axis=1)\n",
+    "y_train = df_train['y']\n",
+    "\n",
+    "df_test = pd.read_csv('test.csv')\n",
+    "X_test = df_test.drop(['y'], axis=1)\n",
+    "y_test = df_test['y']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f68cb3d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=0, solver=&#x27;liblinear&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(random_state=0, solver=&#x27;liblinear&#x27;)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression(random_state=0, solver='liblinear')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "# train the model\n",
+    "model = LogisticRegression(solver='liblinear', random_state=0)\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3c774535",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      0.88      0.88   1732853\n",
+      "           1       0.88      0.87      0.87   1732853\n",
+      "\n",
+      "    accuracy                           0.87   3465706\n",
+      "   macro avg       0.87      0.87      0.87   3465706\n",
+      "weighted avg       0.87      0.87      0.87   3465706\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test the model\n",
+    "predictions = model.predict(X_test)\n",
+    "print(classification_report(y_test,predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "98175ce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1516681, 216172, 217060, 1515793)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute the confusion matrix on the test set\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, predictions).ravel()\n",
+    "print((tn, fp, fn, tp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b4fb2d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "def save_model(pkl_file):\n",
+    "    with open(pkl_file, 'wb') as f:\n",
+    "        pickle.dump(model, f)\n",
+    "        \n",
+    "def load_model(pkl_file):\n",
+    "    with open(pkl_file, 'rb') as f:\n",
+    "        model = pickle.load(f)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0db5caa1",
+   "metadata": {},
+   "source": [
+    "### Test the model directly on images"
    ]
   }
  ],
