total model improvement

--- a/logisitc_regression.ipynb
+++ b/logisitc_regression.ipynb
@@ -1761,6 +1761,132 @@
     "\n",
     "The third model unfortunately showed the worst performance."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0e5a4d82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_lymphocyte(model, im):\n",
+    "    \"\"\"\n",
+    "    Use the trained model to predict if the regions labeled by the watershed transform belong to a lymphocyte or not.\n",
+    "    \"\"\"\n",
+    "    # Apply the watershed algorithm\n",
+    "    ws = apply_watershed(im)\n",
+    "    # Create a mask for the result\n",
+    "    res = np.zeros(ws.shape, dtype = bool)\n",
+    "    # Loop through all regions identified by the watershed algorithm\n",
+    "    # and use the model to identify if the pixels belong to a lymphocyte or not\n",
+    "    for i in np.unique(ws):\n",
+    "        if i == 0:\n",
+    "            continue\n",
+    "        mask = ws == i\n",
+    "        pixel_values = im[mask]\n",
+    "        df = pd.DataFrame(pixel_values, columns=['R', 'G', 'B'])\n",
+    "        predictions = np.array(model.predict(df))\n",
+    "        # If more than 50% of an area is a lymphocyte, the whole area is kept\n",
+    "        if (sum(predictions) > (len(predictions)/2)):\n",
+    "            res[mask] = True\n",
+    "        else:\n",
+    "            res[mask] = predictions\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8c1080b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_model('lr_model_total.pkl')\n",
+    "\n",
+    "images_path = Path(\"MoNuSAC_test\")\n",
+    "masks_path = Path(\"MoNuSAC_test_masks\")\n",
+    "\n",
+    "iou_lst = np.array(test_model(images_path, masks_path, model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "296eacfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.        , 0.        , 0.        , 0.53696301,\n",
+       "       0.14293221, 0.52884818, 0.        , 0.        , 1.        ,\n",
+       "       0.32816165, 0.34812388, 0.54974554, 0.04505428, 0.05477308,\n",
+       "       0.03965393, 0.05633468, 0.06481481, 0.06947891, 0.        ,\n",
+       "       0.02706252, 0.0269696 , 0.09976411, 0.        , 0.0581204 ,\n",
+       "       0.47086031, 0.41330645, 0.36664089, 0.        , 0.        ,\n",
+       "       0.        , 0.64653562, 0.27088419, 0.        , 0.        ,\n",
+       "       0.        , 0.62922115, 0.00459921, 0.36961451, 0.        ,\n",
+       "       0.        , 0.28853845, 0.        , 0.50742491, 0.        ,\n",
+       "       0.06885393, 0.02895211, 0.04560773, 0.00342759, 0.        ,\n",
+       "       0.023146  , 0.098778  , 0.        , 0.        , 0.        ,\n",
+       "       0.03023256, 0.        , 0.1760083 , 0.13578501, 0.0942813 ,\n",
+       "       0.39671564, 0.        , 0.47505543, 0.        , 0.06802721,\n",
+       "       0.        , 0.60833689, 0.13102596, 0.19886656, 0.05047938,\n",
+       "       0.04566249, 0.        , 0.00462107, 0.08234461, 0.22907345,\n",
+       "       0.03879544, 0.21614227, 0.        , 0.23196951, 0.11592603,\n",
+       "       0.        , 0.        , 0.        ])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iou_lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f0e6f2fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13906675906540567"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(iou_lst)/len(iou_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f8c3ead9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22197194235439752"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(iou_lst[iou_lst!=0])/len(iou_lst[iou_lst!=0])"
+   ]
   }
  ],
  "metadata": {
